<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="vertical"
             android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/editWindowPadding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvScale"
                android:layout_width="@dimen/editObjectTextSize"
                android:layout_height="wrap_content"
                android:text="@string/tv_scale"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/bScaleUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_up_button"/>

            <Button
                android:id="@+id/bScaleDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_down_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYaw"
                android:layout_width="@dimen/editObjectTextSize"
                android:layout_height="wrap_content"
                android:text="@string/tv_yaw"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <SeekBar
                android:id="@+id/sbYaw"
                android:layout_width="@dimen/editObjectSeekBarSize"
                android:layout_height="wrap_content"
                android:indeterminate="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPitch"
                android:layout_width="@dimen/editObjectTextSize"
                android:layout_height="wrap_content"
                android:text="@string/tv_pitch"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <SeekBar
                android:id="@+id/sbPitch"
                android:layout_width="@dimen/editObjectSeekBarSize"
                android:layout_height="wrap_content"
                android:indeterminate="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRoll"
                android:layout_width="@dimen/editObjectTextSize"
                android:layout_height="wrap_content"
                android:text="@string/tv_roll"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <SeekBar
                android:id="@+id/sbRoll"
                android:layout_width="@dimen/editObjectSeekBarSize"
                android:layout_height="wrap_content"
                android:indeterminate="false"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_margin="8dp"
        android:text="Done"/>

</FrameLayout>